findbugs: changed Converting method to use Static